--- a/style.css
+++ b/style.css
@@ -122,7 +122,7 @@ button {
   width: 20px;
   height: 20px;
 }
-.completed p{
+.completed p {
   text-decoration: line-through;
   color: var(--teal);
 }
@@ -131,4 +131,36 @@ button {
   height: 24px;
   margin: 0 10px;
   cursor: pointer;
+}
+
+.operation {
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  gap: 100px;
+  margin-top: 30px;
+  width: 100%;
+  border-radius: 20px;
+}
+
+.searchbar {
+  border: 2px solid var(--purple);
+  border-radius: 10px;
+  width: 200px;
+  height: 30px;
+}
+#searchInput {
+  border: 2px solid var(--purple);
+  border-radius: 10px;
+  width: 200px;
+  height: 10px;
+}
+
+.filter {
+  width: 180px;
+  height: 30px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
 }
